@@ -1,3 +1,7 @@
+2009-09-02  David Daney  <ddaney@caviumnetworks.com>
+
+	* gcc.c-torture/compile/builtin_unreachable-1.c: New testcase.
+
 2009-09-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/proc_ptr_comp_18.f90: Removed.
