@@ -1,3 +1,10 @@
+2009-09-02  David Daney  <ddaney@caviumnetworks.com>
+
+	* cfgbuild.c (find_bb_boundaries): Split blocks containing a
+	barrier.
+	* emit-rtl.c (prev_nonnote_insn_bb): New function.
+	* rtl.h (prev_nonnote_insn_bb): Declare it.
+
 2009-08-31  Chris Demetriou  <cgd@google.com>
 
 	* config/i386/i386.c (ix86_vectorize_builtin_conversion): Never
